--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.jpeg
-.jpg
-.mp4
-.txt
-.DS_Store
+*.jpeg
+*.jpg
+*.mp4
+*.txt
+*.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
