--- a/contents.env
+++ b/contents.env
@@ -2,14 +2,19 @@
 FONT_FILE=The Jamsil 5 Bold.ttf
 
 # 색상
-IMAGE_BORDER_COLOR_RGB=246,209,85  # 노랑
-TEXT_BORDER_COLOR_RGB=63,0,113  # 보라
-TEXT_FILL_COLOR_RGB=255,255,255  # 화이트
-NAME_FILL_COLOR_RGB=45,40,77  # 네이비
+
+IMAGE_BORDER_COLOR_RGB=61,183,228  # 하늘색
+TEXT_BORDER_COLOR_RGB=252,106,3  # 주황색
+TEXT_FILL_COLOR_RGB=255,255,255  # 흰색
+NAME_FILL_COLOR_RGB=105,190,40  # 남색
 
 # 내용
-NAME=집수리용반장
-PHONE=010-1111-1111
-LOCATION=서울
-PHONE_TEXT=["오래되서 결함있는 욕실 사워수전", "가성비 좋은 제품으로 교체설치"]
-TITLE=["욕실", "오래된 샤워수전", "가성비 좋은 제품", "교체설치"]
+NAME=리페어브라더스
+PHONE=010-3085-9017
+TITLE=["노후된", "옥상환풍기", "환기안됨증상", "벤츄레타 교체수리"]
+
+MAIN_POSITION_X=90
+MAIN_POSITION_y=225
+MAIN_FONT_SIZE=140
+
+# tel:010-3085-9017
