--- a/contents.env
+++ b/contents.env
@@ -11,9 +11,10 @@ NAME_FILL_COLOR_RGB=105,190,40  # 남색
 # 내용
 NAME=리페어브라더스
 PHONE=010-3085-9017
-TITLE=["외부차량", "진입금지용", "접이식U자볼라드", "신규설치"]
-MAIN_POSITION_X=90
-MAIN_POSITION_y=215
-MAIN_FONT_SIZE=145
+TITLE=["노후된", "옥상환풍기", "환기안됨증상", "벤츄레타 교체수리"]
+
+MAIN_POSITION_X=85
+MAIN_POSITION_y=225
+MAIN_FONT_SIZE=140
 
 # tel:010-3085-9017
