--- a/contents.env
+++ b/contents.env
@@ -11,7 +11,7 @@ NAME_FILL_COLOR_RGB=105,190,40  # 남색
 # 내용
 NAME=리페어브라더스
 PHONE=010-3085-9017
-TITLE=["외부차량", "진입금지용", "접이식U자볼라드", "신규설치"]
+TITLE=["ddd`외부차량", "진입금지용", "접이식U자볼라드", "신규설치"]
 MAIN_POSITION_X=90
 MAIN_POSITION_y=215
 MAIN_FONT_SIZE=145
