--- a/contents.env
+++ b/contents.env
@@ -11,10 +11,10 @@ NAME_FILL_COLOR_RGB=105,190,40  # 남색
 # 내용
 NAME=리페어브라더스
 PHONE=010-3085-9017
-TITLE=["노후된", "옥상환풍기", "환기안됨증상", "벤츄레타 교체수리"]
+TITLE=["고장난 동양매직", "GRA-30B20", "3구쿡탑", "새제품교체수리"]
 
-MAIN_POSITION_X=90
-MAIN_POSITION_y=225
-MAIN_FONT_SIZE=140
+MAIN_POSITION_X=170
+MAIN_POSITION_y=200
+MAIN_FONT_SIZE=155
 
 # tel:010-3085-9017
