--- a/contents.env
+++ b/contents.env
@@ -3,13 +3,13 @@ FONT_FILE=The Jamsil 5 Bold.ttf
 
 # 색상
 
-IMAGE_BORDER_COLOR_RGB=0,0,139  # 하늘색
-TEXT_BORDER_COLOR_RGB=252,106,3  # 주황색
+IMAGE_BORDER_COLOR_RGB=255,66,161  # 마젠타
+TEXT_BORDER_COLOR_RGB=255,66,161  # 마젠타
 TEXT_FILL_COLOR_RGB=255,255,255  # 흰색
-NAME_FILL_COLOR_RGB=105,190,40  # 남색
+NAME_FILL_COLOR_RGB=0,0,0  # 검정색
 
 # 내용
-NAME=리페어브라더스
+NAME=홈케어레어하우스
 PHONE=010-3085-9017
 TITLE=["고장난 동양매직", "GRA-30B20", "3구쿡탑", "새제품교체수리"]
 
